--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   },
   "homepage": "https://github.com/xmcbgdevs/mintyman#readme",
   "dependencies": {
-    "node": "^20.1.0"
+    "next": "^14.1.0",
+    "node": "^20.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "eslint": "8.40.0",
